<resources>
    <string name="app_name">Money Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="date_of_birth">Select DOB</string>
    <string name="pin">PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RsIcon">\u20B9</string>
    <string-array name="accountTyep">
        <item value="0">------</item>
        <item value="1">Savings</item>
        <item value="2">Credit</item>
        <item value="3">Lending</item>
    </string-array>
</resources>